# controllers/eventos.js
@@ -12,4 +12,15 @@ module.exports = {
                 .json({ message: `Error al obtener el tema. Err: ${err}` });
         }
     },
+    getEventosMatricula: async (req, res) => {
+        const matricula = req.params.matricula;
+        try{
+            eventos = await EventosServices.getEventosMatriculaQuery(matricula)
+            return res.status(200).json(eventos)
+        }catch(err){
+            return res
+                .status(500)
+                .json({ message: `Error al obtener el tema. Err: ${err}` });
+        }
+    },
 };
